--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,10 @@
         <button class="btn btn-primary">Shrink!</button>
       </div>
       <hr>
-      <div></div>
+      <div
+        style="width: 100px; height: 100px;"
+        [@divState]="state">
+      </div>
     </div>
   </div>
   <hr>
