--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12">
       <h1>Animations</h1>
       <div class="btn-toolbar">
-        <button class="btn btn-primary">Animate!</button>
+        <button class="btn btn-primary" (click)="onAnimate()">Animate!</button>
         <button class="btn btn-primary">Shrink!</button>
       </div>
       <hr>
