--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,17 @@
       <h1>Animations</h1>
       <div class="btn-toolbar">
         <button class="btn btn-primary" (click)="onAnimate()">Animate!</button>
-        <button class="btn btn-primary">Shrink!</button>
+        <button class="btn btn-primary" (click)="onShrink()">Shrink!</button>
       </div>
       <hr>
       <div
         style="width: 100px; height: 100px;"
         [@divState]="state">
+      </div>
+      <br>
+      <div
+        style="width: 100px; height: 100px;"
+        [@wildState]="wildState">
       </div>
     </div>
   </div>
